fix span overflow issue

--- a/src/Story.css
+++ b/src/Story.css
@@ -253,6 +253,7 @@ span {
 
 .targetWord {
     margin-right: 3px;
+    display: inline-block;
 }
 
 #title {
